@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-16T00:31:07Z",
+  "timestamp" : "2023-08-17T08:08:57Z",
   "count_outdated" : 1398,
   "uniques_outdated" : 337,
-  "count" : 1489,
-  "uniques" : 350,
+  "count" : 1490,
+  "uniques" : 351,
   "views" : [
     {
       "timestamp": "2023-08-04T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-08-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
