@@ -1,6 +1,6 @@
 {
-  "count": 91,
-  "uniques": 13,
+  "count": 92,
+  "uniques": 14,
   "views": [
     {
       "timestamp": "2023-08-04T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2023-08-15T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-08-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
