@@ -1,3 +1,12 @@
+2023-08-17T08:08:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5888379927 # 1825
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-17
+* notice: last 14d: unq all: 14 92
+* notice: prev accum: outdated-unq outdated-all / unq all: 337 1398 / 350 1489
+* notice: next accum: outdated-unq outdated-all / unq all: 337 1398 / 351 1490
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-08-17]
+
 2023-08-16T00:31:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5873183068 # 1821
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-16
